# dbmigrations-mysql

./: MYSQL-AND-TRANSACTIONAL-DDL.TXT  dbmigrations-mysql.cabal
programs/: MooMySQL.hs
src/Database/Schema/Migrations/Backend/: MySQL.hs
test/: BackendTest.hs  TestDriver.hs
