Name:                dbmigrations-mysql
Version:             2.0.0
Synopsis:            The moo executable for MySQL to work with dbmigrations
Description:         This package contains the executable to work with
                     the dbmigrations package when the database backend
                     is MySQL. See the package dbmigrations for details
                     about the dbmigrations project in general.

                     This particular package only supports MySQL.
                     There are other similar packages for other
                     databases, for example for PostgreSQL and SQLite.

                     Please see MYSQL-AND-TRANSACTIONAL-DDL.TXT
                     for a word of warnings about MySQL and
                     transactional integrity regarding DDL statements.

                     To get started, see the 'README.md'
                     (https://github.com/jtdaugherty/dbmigrations/blob/master/README.md)
                     and 'MOO.TXT'
                     (https://raw.githubusercontent.com/jtdaugherty/dbmigrations/master/MOO.TXT)
                     files included in the dbmigrations package and to
                     the usage output for the 'moo-mysql' command.

                     The executable in this package works exactly the
                     same (as described in the dbmigrations package),
                     with only two differences:
                     * The executable this package provides is called
                       'moo-mysql' instead of 'moo'.
                     * The executable in this package only supports MySQL.
                       Consequently, you do not need to specify the
                       database type via DBM_DATABASE_TYPE.

Category:            Database
Author:              Jonathan Daugherty <cygnus@foobox.com>
Maintainer:          Jonathan Daugherty <cygnus@foobox.com>
Build-Type:          Simple
License:             BSD3
License-File:        LICENSE
Cabal-Version:       >= 1.10

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/dbmigrations-mysql.git

Library
  default-language: Haskell2010
  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -funbox-strict-fields

  Build-Depends:
    base >= 4 && < 5,
    dbmigrations >= 2,
    time >= 1.4,
    mysql >= 0.1.1.8,
    mysql-simple >= 0.2.2.5,
    split >= 0.2.2

  Hs-Source-Dirs:    src
  Exposed-Modules:
          Database.Schema.Migrations.Backend.MySQL

Executable moo-mysql
  default-language: Haskell2010
  Build-Depends:
    base >= 4 && < 5,
    dbmigrations-mysql,
    dbmigrations >= 2

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  Hs-Source-Dirs:  programs
  Main-is:         MooMySQL.hs

test-suite dbmigrations-mysql-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  Build-Depends:
    base >= 4 && < 5,
    dbmigrations >= 2,
    dbmigrations-mysql >= 2,
    mysql-simple >= 0.2.2.5,
    mysql >= 0.1.1.8,
    process >= 1.1,
    HUnit >= 1.2

  other-modules:
    BackendTest
    TestDriver

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                 -fno-warn-unused-do-bind -Wwarn
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  Hs-Source-Dirs:  test
  Main-is:         TestDriver.hs
